fix content shift

--- a/theme/css/article.css
+++ b/theme/css/article.css
@@ -1,36 +1,3 @@
-.article {
-    padding: 0 20px 20px 20px;
-}
-
-.article p {
-    font-size: 18px;
-    line-height: 1.8;
-    color: #333;
-    margin-bottom: 1.5em;
-    text-align: justify;
-}
-
-.article h2 {
-    font-size: 1.5em;
-}
-
-.article h3 {
-    font-size: 1.3em;
-}
-
-.article h4 {
-    font-size: 1.1em;
-}
-
-.article ul,
-.article ol {
-    margin-left: 20px;
-    padding-left: 0;
-}
-
-.article li {
-    margin-bottom: 0.5em;
-}
 
 p.notice {
     padding: .5rem;
@@ -40,8 +7,6 @@ p.notice {
 }
 
 #banner {
-    width: 100%;
-    height: 350px;
     overflow: hidden;
     position: relative;
     margin-bottom: 20px;
@@ -55,9 +20,7 @@ p.notice {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* Cover the banner area without distorting the image */
     z-index: 0;
-    /* Ensure the image stays below the text */
 }
 
 #banner::before {
@@ -89,6 +52,7 @@ p.notice {
     font-size: 1.25rem;
     color: #333;
     text-transform: uppercase;
+    margin-left: 20px;
     margin-bottom: 0.5rem;
     border-bottom: 1px solid #ddd;
     padding-bottom: 0.5rem;
@@ -141,9 +105,8 @@ p.notice {
 }
 
 #comment-field {
-    margin-left: 0;
     width: 100%;
-    padding: 0 20px;
+    padding: 0 15px;
     max-width: 910px;
     margin-top: 20px;
     padding-top: 10px;
